src/test/ui/rfc-2093-infer-outlives/regions-outlives-nominal-type-type.stderr
error[E0491]: in type `&'a variant_struct_type::Foo<&'b i32>`, reference has a longer lifetime than the data it references
  --> $DIR/regions-outlives-nominal-type-type.rs:17:9
   |
LL |         type Out = &'a Foo<&'b i32>;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the pointer is valid for the lifetime 'a as defined on the impl at 16:10
  --> $DIR/regions-outlives-nominal-type-type.rs:16:10
   |
LL |     impl<'a, 'b> Trait<'a, 'b> for usize {
   |          ^^
note: but the referenced data is only valid for the lifetime 'b as defined on the impl at 16:14
  --> $DIR/regions-outlives-nominal-type-type.rs:16:14
   |
LL |     impl<'a, 'b> Trait<'a, 'b> for usize {
   |              ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0491`.
